// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SQL doesnt merge queries with same id from different queries should merge object correctly if id matches 1`] = `
Array [
  "select \\"date\\", sum(\\"transactionrevenue\\") as \\"value\\" from \\"ii_transactional\\" where (\\"ii_transactional\\".\\"country\\" = 'US') AND ((\\"ii_transactional\\".\\"domain\\" IN ('test.com','test2.com'))) AND ((\\"ii_transactional\\".\\"date\\" >= '2022-01-05') AND (\\"ii_transactional\\".\\"date\\" <= '2022-01-08')) group by \\"date\\" order by \\"revenue\\" desc limit 10",
  "select \\"date\\", sum(\\"transactionrevenue\\") as \\"value1\\" from \\"ii_transactionalb\\" where (\\"ii_transactionalb\\".\\"country\\" = 'US') AND ((\\"ii_transactionalb\\".\\"domain\\" IN ('test.com','test2.com'))) AND ((\\"ii_transactionalb\\".\\"date\\" >= '2022-01-05') AND (\\"ii_transactionalb\\".\\"date\\" <= '2022-01-08')) group by \\"date\\" order by \\"revenue\\" desc limit 10",
]
`;

exports[`SQL doesnt merge queries with same id from different queries should merge object correctly if id matches 2`] = `
Object {
  "matrix": Array [
    Object {
      "date": "1",
      "value": "101",
      "value1": "1011",
    },
    Object {
      "date": "2",
      "value": "107",
      "value1": "1071",
    },
    Object {
      "date": "3",
      "value": "201",
      "value1": "2011",
    },
    Object {
      "date": "4",
      "value": "207",
      "value1": "2071",
    },
  ],
}
`;

exports[`SQL failed with $#@# instead of . should correctly return names with dots inside like test.com.us 1`] = `
Array [
  "select \\"domain\\", sum(\\"transactionrevenue\\") as \\"value\\" from \\"ii_transactional\\" where (\\"ii_transactional\\".\\"country\\" = 'US') AND ((\\"ii_transactional\\".\\"domain\\" IN ('test.com','test2.com'))) AND ((\\"ii_transactional\\".\\"date\\" >= '2022-01-05') AND (\\"ii_transactional\\".\\"date\\" <= '2022-01-08')) group by \\"domain\\" order by \\"revenue\\" desc limit 10",
]
`;

exports[`SQL failed with $#@# instead of . should correctly return names with dots inside like test.com.us 2`] = `
Object {
  "matrix": Array [
    Object {
      "domain": "test.com",
      "value": "101",
    },
    Object {
      "domain": "test2.com",
      "value": "107",
    },
    Object {
      "domain": "test.com.us",
      "value": "201",
    },
    Object {
      "domain": "test.com.ua",
      "value": "207",
    },
  ],
}
`;

exports[`directive parse doesnt work for date field should correctly parse date 1`] = `
Array [
  "select \\"date\\", sum(\\"transactionrevenue\\") as \\"value\\" from \\"ii_transactional\\" where (\\"ii_transactional\\".\\"country\\" = 'US') AND ((\\"ii_transactional\\".\\"domain\\" IN ('test.com','test2.com'))) AND ((\\"ii_transactional\\".\\"date\\" >= '2022-01-05') AND (\\"ii_transactional\\".\\"date\\" <= '2022-01-08')) group by \\"date\\" order by \\"date\\" desc",
]
`;

exports[`directive parse doesnt work for date field should correctly parse date 2`] = `
Object {
  "matrix": Array [
    Object {
      "date": "Thu Jan 06 2022 01:00:00 GMT+0100 (Central European Standard Time)",
      "value": 101,
    },
    Object {
      "date": "Thu Jan 07 2022 01:00:00 GMT+0100 (Central European Standard Time)",
      "value": 101,
    },
    Object {
      "date": "Thu Jan 08 2022 01:00:00 GMT+0100 (Central European Standard Time)",
      "value": 101,
    },
  ],
}
`;
